# WebWatcher

./: .gitignore  CMakeLists.txt  resources.qrc
development/: ТЗ.txt
src/: CMakeLists.txt  applicationlanguage.cpp  applicationlanguage.h  applicationlanguage.hpp  applicationsettings.cpp  applicationsettings.h  cefenginewrapper.cpp  cefenginewrapper.hpp  files.txt  languagedialog.ui  logging.cpp  logging.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  notification.ui  notificator.cpp  notificator.h  timeunit.cpp  timeunit.h  timeunit.hpp  watcherinputdialog.cpp  watcherinputdialog.h  watcherinputdialog.hpp  watcherinputdialog.ui  webwatcher.cpp  webwatcher.h  webwatcher.hpp
src/cefengine/: CMakeLists.txt  cefbrowserapp.cpp  cefbrowserapp.hpp  cefbrowserclient.cpp  cefbrowserclient.hpp  cefengine.cpp  cefengine.hpp
translations/: ReadMe.txt  translations.qrc  webwatcher_ru-RU.ts  webwatcher_ru_RU.ts
